<resources>
    <string name="app_name">Secure Password Keeper</string>

    <!-- Views text -->
    <string name="login_fragment">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button">Save</string>
    <string name="login_button">Login</string>
    <string name="password_radio_text">Password</string>
    <string name="pin_radio_text">PIN</string>
    <string name="disable_auth">Disable authentication</string>
    <string name="add_new_password_title">Add new password</string>
    <string name="edit_password_title">Edit password</string>
    <string name="password_label">Password</string>
    <string name="finish_button">Finish</string>
    <string name="update_password_button_text">Update</string>
    <string name="add_password_button_text">Add</string>
    <string name="back_button_text">Back</string>
    <string name="website_label">Website</string>
    <string name="username_label">Username</string>
    <string name="username_from_a_to_z">Username A-Z</string>
    <string name="username_from_z_to_a">Username Z-A</string>
    <string name="website_from_a_to_z">Website A-Z</string>
    <string name="website_from_z_to_a">Website Z-A</string>
    <string name="latest_passwords">Latest</string>
    <string name="oldest_passwords">Oldest</string>

    <!-- Views hints -->
    <string name="password_hint">Please enter password</string>
    <string name="password_repeat_hint">Please repeat password</string>
    <string name="pin_hint">Please enter PIN</string>
    <string name="pin_repeat_hint">Please repeat PIN</string>
    <string name="password">Password*</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="website">Website or any password name</string>
    <string name="username">Username*</string>
    <string name="save">Save</string>
    <string name="search_text">Search</string>
    <string name="clear_text">Clear</string>

    <!-- Text messages, errors -->
    <string name="password_too_short">Minimal password length is 8 symbols</string>
    <string name="password_do_not_match_error">Passwords don\'t match</string>
    <string name="internal_error">Internal error, please try again. Or restart application</string>
    <string name="username_empty_error">Username is empty or contains spaces</string>
    <string name="website_empty_error">Please enter a website name/address or any password name</string>
    <string name="password_list_empty">Empty</string>
    <string name="no_data">No Data</string>
    <string name="space_char_error">Password cannot contain space character</string>
    <string name="password_blank_or_empty_error">Password is empty or contains spaces</string>
    <string name="undo_password_removal">Undo</string>
    <string name="password_is_removed">Password is removed. You still can undo this</string>
    <string name="generate_password_button">Generate password</string>
    <string name="password_generator_fragment_title">Password generator</string>
    <string name="include_symbols_label">Include symbols</string>
    <string name="checkbox_symbols_text">E.g. !@#$</string>
    <string name="checkbox_numbers_text">E.g. 1234</string>
    <string name="include_numbers_label">Include digits</string>
    <string name="checkbox_letters_text">E.g. AbCd</string>
    <string name="include_letters_label">Include letters</string>
    <string name="password_length_label">Password length</string>
    <string name="generated_password_label">Password</string>
    <string name="dialog_generate_password_button">Generate password</string>
    <string name="search_hint">Type what to search</string>
    <string name="save_generated_password_button">Save</string>
    <string name="show_all_button_text">Show all</string>
    <string name="biometric_radio_text">Biometric</string>
    <string name="data_copied">Copied</string>


</resources>