<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="lv.maros.secured.password.keeper.pages.setup.views.ConfigureAuthMethodFragment">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/passwordRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_radio_text"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:padding="@dimen/margin_small"/>

            <RadioButton
                android:id="@+id/pinRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_radio_text"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:padding="@dimen/margin_small"/>

            <RadioButton
                android:id="@+id/disableAuthRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable_auth"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:padding="@dimen/margin_small"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>